[project]
name = "pmpnat-pusher"
version = "1.0.0"
description = "Push the new PMP-NAT port to git"
requires-python = ">=3.10"
dependencies = [
  "peppercorn"
]
[project.optional-dependencies] # Optional
dev = [
  "black",
  "pre-commit",
  "ruff"
]
[project.scripts]
pusher = "pusher.__main__:main"

[build-system]
requires = [
  "setuptools~=65.3",
  "wheel",
  "build"
]
build-backend = "setuptools.build_meta"

#[tool.setuptools.package-data]
#"pusher" = ["*.dat"]


[tool.ruff]
# https://beta.ruff.rs/docs/rules
select = ["A", "F", "S", "I", "T10", "B", "UP", "ISC", "T20", "RSE", "Q", "ARG", "TRY", "C4", "RUF"]
target-version = "py311"
line-length = 120
respect-gitignore = true
